{{$NEXT}}

1.0.0     2011-01-22 22:35:38 Europe/Rome
   - release

0.1.0_3   2010-12-06 07:41:47 Europe/Rome
   - set minimum perl version to 5.8.0

0.1.0_2   2010-12-05 00:10:16 Europe/Rome
   - fixed typos/errors in the documentation

0.1.0_1   2010-12-04 18:23:49 Europe/Rome
   - initial release